# FlowCast

./: CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.cpp
include/: Episodio.h  MainWindow.h  Pelicula.h  Serie.h  Video.h
src/: Episodio.cpp  MainWindow.cpp  Pelicula.cpp  Video.cpp  serie.cpp
